@@ -20,7 +20,7 @@
  * This software is distributed on an "AS IS" basis, WITHOUT WARRANTY OF ANY
  * KIND, either express or implied.
  *
- * $Id: urldata.h,v 1.177 2003-09-19 12:56:24 bagder Exp $
+ * $Id: urldata.h,v 1.178 2003-09-19 15:16:49 bagder Exp $
  ***************************************************************************/
 
 /* This file is for lib internal stuff */
@@ -826,6 +826,8 @@ struct UserDefined {
   char *private; /* Private data */
 
   struct curl_slist *http200aliases; /* linked list of aliases for http200 */
+
+  int ip_version; 
   
 /* Here follows boolean settings that define how to behave during
    this session. They are STATIC, set by libcurl users or at least initially
